tests/ui/wf/wf-convert-dyn-incompat-trait-obj.stderr
error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/wf-convert-dyn-incompat-trait-obj.rs:16:25
   |
LL |     let t: &dyn Trait = &S;
   |                         ^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/wf-convert-dyn-incompat-trait-obj.rs:6:14
   |
LL | trait Trait: Sized {}
   |       -----  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait is not dyn compatible...
   = help: only type `S` implements `Trait`; consider using it directly instead.
   = note: required for the cast from `&S` to `&dyn Trait`

error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/wf-convert-dyn-incompat-trait-obj.rs:17:17
   |
LL |     takes_trait(&S);
   |                 ^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/wf-convert-dyn-incompat-trait-obj.rs:6:14
   |
LL | trait Trait: Sized {}
   |       -----  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait is not dyn compatible...
   = help: only type `S` implements `Trait`; consider using it directly instead.
   = note: required for the cast from `&S` to `&dyn Trait`

error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/wf-convert-dyn-incompat-trait-obj.rs:15:5
   |
LL |     &S as &dyn Trait;
   |     ^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/wf-convert-dyn-incompat-trait-obj.rs:6:14
   |
LL | trait Trait: Sized {}
   |       -----  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait is not dyn compatible...
   = help: only type `S` implements `Trait`; consider using it directly instead.
   = note: required for the cast from `&S` to `&dyn Trait`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0038`.
